@@ -2,7 +2,6 @@ package dev.corexinc.corex.environment.generators;
 
 import dev.corexinc.corex.api.tags.AbstractTag;
 import dev.corexinc.corex.engine.queue.ScriptQueue;
-import dev.corexinc.corex.engine.scripts.ScriptManager;
 import dev.corexinc.corex.environment.containers.GeneratorContainer;
 import dev.corexinc.corex.environment.tags.core.ContextTag;
 import dev.corexinc.corex.environment.tags.core.ElementTag;
@@ -10,8 +9,8 @@ import dev.corexinc.corex.environment.tags.core.MapTag;
 import dev.corexinc.corex.environment.tags.world.BiomeTag;
 import dev.corexinc.corex.environment.tags.world.ChunkTag;
 import dev.corexinc.corex.environment.tags.world.LocationTag;
-import dev.corexinc.corex.environment.tags.world.MaterialTag;
 import dev.corexinc.corex.environment.tags.world.WorldTag;
+import dev.corexinc.corex.engine.scripts.ScriptManager;
 import io.papermc.paper.registry.RegistryAccess;
 import io.papermc.paper.registry.RegistryKey;
 import org.bukkit.Bukkit;
@@ -29,14 +28,17 @@ import org.jetbrains.annotations.Nullable;
 import java.util.Collections;
 import java.util.List;
 import java.util.Random;
+import java.util.concurrent.atomic.AtomicReference;
 
 public class ScriptedChunkGenerator extends ChunkGenerator {
 
     public static final String TEMP_LIMITED_REGION = "__limitedRegion";
+    public static final String TEMP_CHUNK_DATA = "__chunkData";
 
     private final String containerName;
-    private final MapTag instanceDefs;
-    private volatile Boolean cachedCanSpawn = null;
+    final MapTag instanceDefs;
+
+    private final AtomicReference<Boolean> cachedCanSpawn = new AtomicReference<>();
 
     public ScriptedChunkGenerator(@NotNull String containerName, @NotNull MapTag instanceDefs) {
         this.containerName = containerName;
@@ -44,304 +46,210 @@ public class ScriptedChunkGenerator extends ChunkGenerator {
     }
 
     @Nullable
-    private GeneratorContainer container() {
+    GeneratorContainer container() {
         Object raw = ScriptManager.getContainer(containerName);
         return raw instanceof GeneratorContainer gc ? gc : null;
     }
 
-    @Override
-    public boolean shouldGenerateNoise(@NotNull WorldInfo worldInfo, @NotNull Random random, int chunkX, int chunkZ) {
+    private boolean vanillaFirst(@NotNull String section, boolean def) {
         GeneratorContainer gc = container();
-        if (gc == null || !gc.hasSection(GeneratorContainer.SECTION_NOISE)) return true;
-        return gc.isVanillaFirst(GeneratorContainer.SECTION_NOISE);
+        return gc == null || !gc.hasSection(section) ? def : gc.isVanillaFirst(section);
     }
 
     @Override
-    public boolean shouldGenerateSurface(@NotNull WorldInfo worldInfo, @NotNull Random random, int chunkX, int chunkZ) {
-        GeneratorContainer gc = container();
-        if (gc == null || !gc.hasSection(GeneratorContainer.SECTION_SURFACE)) return true;
-        return gc.isVanillaFirst(GeneratorContainer.SECTION_SURFACE);
+    public boolean shouldGenerateNoise(@NotNull WorldInfo info, @NotNull Random random, int chunkX, int chunkZ) {
+        return vanillaFirst(GeneratorContainer.SECTION_NOISE, true);
     }
 
     @Override
-    public boolean shouldGenerateCaves(@NotNull WorldInfo worldInfo, @NotNull Random random, int chunkX, int chunkZ) {
-        GeneratorContainer gc = container();
-        if (gc == null || !gc.hasSection(GeneratorContainer.SECTION_CAVES)) return true;
-        return gc.isVanillaFirst(GeneratorContainer.SECTION_CAVES);
+    public boolean shouldGenerateSurface(@NotNull WorldInfo info, @NotNull Random random, int chunkX, int chunkZ) {
+        return vanillaFirst(GeneratorContainer.SECTION_SURFACE, true);
     }
 
     @Override
-    public boolean shouldGenerateDecorations(@NotNull WorldInfo worldInfo, @NotNull Random random, int chunkX, int chunkZ) {
-        GeneratorContainer gc = container();
-        if (gc == null || !gc.hasSection(GeneratorContainer.SECTION_POPULATORS)) return true;
-        return gc.isVanillaFirst(GeneratorContainer.SECTION_POPULATORS);
+    public boolean shouldGenerateCaves(@NotNull WorldInfo info, @NotNull Random random, int chunkX, int chunkZ) {
+        return vanillaFirst(GeneratorContainer.SECTION_CAVES, true);
     }
 
     @Override
-    public boolean shouldGenerateMobs(@NotNull WorldInfo worldInfo, @NotNull Random random, int chunkX, int chunkZ) {
-        if (cachedCanSpawn != null) return cachedCanSpawn;
+    public boolean shouldGenerateDecorations(@NotNull WorldInfo info, @NotNull Random random, int chunkX, int chunkZ) {
+        return vanillaFirst(GeneratorContainer.SECTION_POPULATORS, true);
+    }
+
+    @Override
+    public boolean shouldGenerateMobs(@NotNull WorldInfo info, @NotNull Random random, int chunkX, int chunkZ) {
+        Boolean cached = cachedCanSpawn.get();
+        if (cached != null) return cached;
 
         GeneratorContainer gc = container();
         if (gc == null || !gc.hasSection(GeneratorContainer.SECTION_CAN_SPAWN)) {
-            cachedCanSpawn = true;
+            cachedCanSpawn.compareAndSet(null, true);
             return true;
         }
 
-        ContextTag ctx = new ContextTag();
-        ScriptQueue queue = gc.runSection(GeneratorContainer.SECTION_CAN_SPAWN, ctx, instanceDefs);
-        if (queue == null) {
-            cachedCanSpawn = true;
-            return true;
-        }
+        ScriptQueue queue = gc.runSection(GeneratorContainer.SECTION_CAN_SPAWN, buildChunkContext(info, chunkX, chunkZ), instanceDefs);
+        boolean result = queue != null
+                && !queue.getReturns().isEmpty()
+                && queue.getReturns().getFirst() instanceof ElementTag el
+                && el.asBoolean();
 
-        List<AbstractTag> returns = queue.getReturns();
-        boolean result = !returns.isEmpty() && returns.getFirst() instanceof ElementTag el && el.asBoolean();
-
-        cachedCanSpawn = result;
-        return result;
+        cachedCanSpawn.compareAndSet(null, result);
+        return cachedCanSpawn.get();
     }
 
     @Override
-    public boolean shouldGenerateStructures(@NotNull WorldInfo worldInfo, @NotNull Random random, int chunkX, int chunkZ) {
+    public boolean shouldGenerateStructures(@NotNull WorldInfo info, @NotNull Random random, int chunkX, int chunkZ) {
         return false;
     }
 
     @Override
-    public void generateNoise(@NotNull WorldInfo worldInfo, @NotNull Random random, int chunkX, int chunkZ, @NotNull ChunkData chunkData) {
-        runGenerationSection(GeneratorContainer.SECTION_NOISE, worldInfo, chunkX, chunkZ, chunkData);
+    public void generateNoise(@NotNull WorldInfo info, @NotNull Random random, int chunkX, int chunkZ, @NotNull ChunkData chunkData) {
+        runSection(GeneratorContainer.SECTION_NOISE, info, chunkX, chunkZ, chunkData);
     }
 
     @Override
-    public void generateSurface(@NotNull WorldInfo worldInfo, @NotNull Random random, int chunkX, int chunkZ, @NotNull ChunkData chunkData) {
-        runGenerationSection(GeneratorContainer.SECTION_SURFACE, worldInfo, chunkX, chunkZ, chunkData);
+    public void generateSurface(@NotNull WorldInfo info, @NotNull Random random, int chunkX, int chunkZ, @NotNull ChunkData chunkData) {
+        runSection(GeneratorContainer.SECTION_SURFACE, info, chunkX, chunkZ, chunkData);
     }
 
     @Override
-    public void generateBedrock(@NotNull WorldInfo worldInfo, @NotNull Random random, int chunkX, int chunkZ, @NotNull ChunkData chunkData) {
-        runGenerationSection(GeneratorContainer.SECTION_BEDROCK, worldInfo, chunkX, chunkZ, chunkData);
+    public void generateBedrock(@NotNull WorldInfo info, @NotNull Random random, int chunkX, int chunkZ, @NotNull ChunkData chunkData) {
+        runSection(GeneratorContainer.SECTION_BEDROCK, info, chunkX, chunkZ, chunkData);
     }
 
     @Override
-    public void generateCaves(@NotNull WorldInfo worldInfo, @NotNull Random random, int chunkX, int chunkZ, @NotNull ChunkData chunkData) {
-        runGenerationSection(GeneratorContainer.SECTION_CAVES, worldInfo, chunkX, chunkZ, chunkData);
+    public void generateCaves(@NotNull WorldInfo info, @NotNull Random random, int chunkX, int chunkZ, @NotNull ChunkData chunkData) {
+        runSection(GeneratorContainer.SECTION_CAVES, info, chunkX, chunkZ, chunkData);
     }
 
     @Override
-    @Nullable
-    public BiomeProvider getDefaultBiomeProvider(@NotNull WorldInfo worldInfo) {
+    public @Nullable BiomeProvider getDefaultBiomeProvider(@NotNull WorldInfo info) {
         GeneratorContainer gc = container();
-        if (gc == null || !gc.hasSection(GeneratorContainer.SECTION_BIOME)) return null;
-        return new ScriptedBiomeProvider(containerName, instanceDefs);
+        return (gc == null || !gc.hasSection(GeneratorContainer.SECTION_BIOME)) ? null : new ScriptedBiomeProvider(this);
     }
 
     @Override
-    @NotNull
-    public List<BlockPopulator> getDefaultPopulators(@NotNull World world) {
+    public @NotNull List<BlockPopulator> getDefaultPopulators(@NotNull World world) {
         GeneratorContainer gc = container();
-        if (gc == null || !gc.hasSection(GeneratorContainer.SECTION_POPULATORS)) {
-            return Collections.emptyList();
-        }
-        return List.of(new ScriptedBlockPopulator(containerName, instanceDefs));
+        return (gc == null || !gc.hasSection(GeneratorContainer.SECTION_POPULATORS))
+                ? Collections.emptyList()
+                : List.of(new ScriptedBlockPopulator(this));
     }
 
     @Override
-    @Nullable
-    public Location getFixedSpawnLocation(@NotNull World world, @NotNull Random random) {
+    public @Nullable Location getFixedSpawnLocation(@NotNull World world, @NotNull Random random) {
         GeneratorContainer gc = container();
         if (gc == null || !gc.hasSection(GeneratorContainer.SECTION_SPAWN_LOCATION)) return null;
 
         ScriptQueue queue = gc.runSection(GeneratorContainer.SECTION_SPAWN_LOCATION, buildSpawnContext(world), instanceDefs);
-        if (queue == null) return null;
+        if (queue == null || queue.getReturns().isEmpty()) return null;
 
-        List<AbstractTag> returns = queue.getReturns();
-        if (returns.isEmpty()) return null;
-
-        AbstractTag ret = returns.getFirst();
+        AbstractTag ret = queue.getReturns().getFirst();
         Location loc = ret instanceof LocationTag lt ? lt.getLocation() : new LocationTag(ret.identify()).getLocation();
-
         if (loc.getWorld() == null) loc.setWorld(world);
         return loc;
     }
 
-    private ContextTag buildChunkContext(@NotNull WorldInfo worldInfo, int chunkX, int chunkZ) {
-        World world = Bukkit.getWorld(worldInfo.getName());
-        ContextTag ctx = new ContextTag()
-                .put("baseHeight", new ElementTag(resolveBaseHeight(worldInfo, chunkX, chunkZ)))
-                .put("worldName", new ElementTag(worldInfo.getName()))
-                .put("minHeight", new ElementTag(worldInfo.getMinHeight()));
-
-        addChunkContext(ctx, world, chunkX, chunkZ);
-        return ctx;
+    static ContextTag buildChunkContext(@NotNull WorldInfo info, int chunkX, int chunkZ) {
+        return new ContextTag()
+                .put("world", new WorldTag(info))
+                .put("chunk", new ChunkTag(info, chunkX, chunkZ));
     }
 
     private ContextTag buildSpawnContext(@NotNull World world) {
-        int chunkX = 0;
-        int chunkZ = 0;
-        ContextTag ctx = new ContextTag()
-                .put("baseHeight", new ElementTag(resolveBaseHeight(containerName, world, chunkX, chunkZ, instanceDefs)))
-                .put("worldName", new ElementTag(world.getName()))
-                .put("minHeight", new ElementTag(world.getMinHeight()));
-
-        addChunkContext(ctx, world, chunkX, chunkZ);
-        return ctx;
+        return new ContextTag()
+                .put("world", new WorldTag(world))
+                .put("chunk", new ChunkTag(world, 0, 0));
     }
 
-    private int resolveBaseHeight(@NotNull WorldInfo worldInfo, int chunkX, int chunkZ) {
-        return resolveBaseHeight(containerName, worldInfo, chunkX, chunkZ, instanceDefs);
+    private int resolveBaseHeight(@NotNull WorldInfo info, int chunkX, int chunkZ) {
+        GeneratorContainer gc = container();
+        if (gc == null || !gc.hasSection(GeneratorContainer.SECTION_BASE_HEIGHT)) return 64;
+
+        ScriptQueue queue = gc.runSection(GeneratorContainer.SECTION_BASE_HEIGHT, buildChunkContext(info, chunkX, chunkZ), instanceDefs);
+        return (queue != null
+                && !queue.getReturns().isEmpty()
+                && queue.getReturns().getFirst() instanceof ElementTag el
+                && el.isInt())
+                ? el.asInt()
+                : 64;
     }
 
-    private static int resolveBaseHeight(@NotNull String containerName, @NotNull WorldInfo worldInfo, int chunkX, int chunkZ) {
-        return resolveBaseHeight(containerName, worldInfo, chunkX, chunkZ, new MapTag());
-    }
-
-    private static int resolveBaseHeight(@NotNull String containerName, @NotNull WorldInfo worldInfo, int chunkX, int chunkZ, @NotNull MapTag instanceDefs) {
-        Object raw = ScriptManager.getContainer(containerName);
-        if (!(raw instanceof GeneratorContainer gc)) return 64;
-        if (!gc.hasSection(GeneratorContainer.SECTION_BASE_HEIGHT)) return 64;
-
-        World world = Bukkit.getWorld(worldInfo.getName());
-        ContextTag ctx = new ContextTag();
-        addChunkContext(ctx, world, chunkX, chunkZ);
-
-        ScriptQueue queue = gc.runSection(GeneratorContainer.SECTION_BASE_HEIGHT, ctx, instanceDefs);
-        if (queue == null) return 64;
-
-        List<AbstractTag> returns = queue.getReturns();
-        if (returns.isEmpty()) return 64;
-
-        AbstractTag ret = returns.getFirst();
-        return (ret instanceof ElementTag el && el.isInt()) ? el.asInt() : 64;
-    }
-
-    private static int resolveBaseHeight(@NotNull String containerName, @NotNull World world, int chunkX, int chunkZ) {
-        return resolveBaseHeight(containerName, world, chunkX, chunkZ, new MapTag());
-    }
-
-    private static int resolveBaseHeight(@NotNull String containerName, @NotNull World world, int chunkX, int chunkZ, @NotNull MapTag instanceDefs) {
-        Object raw = ScriptManager.getContainer(containerName);
-        if (!(raw instanceof GeneratorContainer gc)) return 64;
-        if (!gc.hasSection(GeneratorContainer.SECTION_BASE_HEIGHT)) return 64;
-
-        ContextTag ctx = new ContextTag();
-        addChunkContext(ctx, world, chunkX, chunkZ);
-
-        ScriptQueue queue = gc.runSection(GeneratorContainer.SECTION_BASE_HEIGHT, ctx, instanceDefs);
-        if (queue == null) return 64;
-
-        List<AbstractTag> returns = queue.getReturns();
-        if (returns.isEmpty()) return 64;
-
-        AbstractTag ret = returns.getFirst();
-        return (ret instanceof ElementTag el && el.isInt()) ? el.asInt() : 64;
-    }
-
-    private void runGenerationSection(@NotNull String section, @NotNull WorldInfo worldInfo, int chunkX, int chunkZ, @NotNull ChunkData chunkData) {
+    private void runSection(@NotNull String section, @NotNull WorldInfo info, int chunkX, int chunkZ, @NotNull ChunkData chunkData) {
         GeneratorContainer gc = container();
         if (gc == null || !gc.hasSection(section)) return;
 
-        ScriptQueue queue = gc.createQueue(section, buildChunkContext(worldInfo, chunkX, chunkZ), instanceDefs);
-        if (queue == null) return;
-
-        queue.start();
-
-        for (AbstractTag ret : queue.getReturns()) {
-            if (!(ret instanceof MapTag mapTag)) continue;
-
-            for (String key : mapTag.keySet()) {
-                try {
-                    LocationTag loc = new LocationTag(key);
-                    Location l = loc.getLocation();
-
-                    AbstractTag val = mapTag.getObject(key);
-                    MaterialTag mat = val instanceof MaterialTag m ? m : new MaterialTag(val.identify());
-
-                    if (mat.getBlockData() == null) continue;
-
-                    chunkData.setBlock(l.getBlockX() & 15, l.getBlockY(), l.getBlockZ() & 15, mat.getBlockData());
-                } catch (Exception ignored) {
-                }
-            }
+        ScriptQueue queue = gc.createQueue(section, buildChunkContext(info, chunkX, chunkZ), instanceDefs);
+        if (queue != null) {
+            queue.setTempData(TEMP_CHUNK_DATA, chunkData);
+            queue.start();
         }
     }
 
     private static class ScriptedBiomeProvider extends BiomeProvider {
 
-        private final String containerName;
-        private final MapTag instanceDefs;
+        private final ScriptedChunkGenerator outer;
 
-        ScriptedBiomeProvider(@NotNull String containerName, @NotNull MapTag instanceDefs) {
-            this.containerName = containerName;
-            this.instanceDefs = instanceDefs;
+        ScriptedBiomeProvider(@NotNull ScriptedChunkGenerator outer) {
+            this.outer = outer;
         }
 
         @Override
         public @NotNull Biome getBiome(@NotNull WorldInfo info, int x, int y, int z) {
-            Object raw = ScriptManager.getContainer(containerName);
-            if (!(raw instanceof GeneratorContainer gc)) return Biome.PLAINS;
+            GeneratorContainer gc = outer.container();
+            if (gc == null) return Biome.PLAINS;
 
-            World world = Bukkit.getWorld(info.getName());
-            ContextTag ctx = new ContextTag()
-                    .put("location", new LocationTag(new Location(world, x, y, z)));
-            if (world != null) {
-                ctx.put("world", new WorldTag(world));
-            }
-            ScriptQueue queue = gc.runSection(GeneratorContainer.SECTION_BIOME, ctx, instanceDefs);
-            if (queue == null) return Biome.PLAINS;
+            World world = Bukkit.getWorld(info.getUID());
+            LocationTag locationTag = (world != null)
+                    ? new LocationTag(new Location(world, x, y, z))
+                    : new LocationTag(x + "," + y + "," + z);
 
-            List<AbstractTag> returns = queue.getReturns();
-            if (returns.isEmpty()) return Biome.PLAINS;
+            ScriptQueue queue = gc.runSection(
+                    GeneratorContainer.SECTION_BIOME,
+                    new ContextTag()
+                            .put("world", new WorldTag(info))
+                            .put("location", locationTag),
+                    outer.instanceDefs
+            );
 
-            AbstractTag ret = returns.getFirst();
-            BiomeTag biomeTag = ret instanceof BiomeTag bt ? bt : new BiomeTag(ret.identify());
-            if (biomeTag.getBiomeKey() == null) return Biome.PLAINS;
+            if (queue == null || queue.getReturns().isEmpty()) return Biome.PLAINS;
 
-            Biome resolved = RegistryAccess.registryAccess().getRegistry(RegistryKey.BIOME).get(biomeTag.getBiomeKey());
-            return resolved != null ? resolved : Biome.PLAINS;
+            AbstractTag first = queue.getReturns().getFirst();
+            BiomeTag bt = first instanceof BiomeTag b ? b : new BiomeTag(first.identify());
+            if (bt.getBiomeKey() == null) return Biome.PLAINS;
+
+            Biome b = RegistryAccess.registryAccess().getRegistry(RegistryKey.BIOME).get(bt.getBiomeKey());
+            return b != null ? b : Biome.PLAINS;
         }
 
         @Override
         public @NotNull List<Biome> getBiomes(@NotNull WorldInfo info) {
-            return List.copyOf(RegistryAccess.registryAccess().getRegistry(RegistryKey.BIOME).stream().toList());
+            return RegistryAccess.registryAccess().getRegistry(RegistryKey.BIOME).stream().toList();
         }
     }
 
     private static class ScriptedBlockPopulator extends BlockPopulator {
 
-        private final String containerName;
-        private final MapTag instanceDefs;
+        private final ScriptedChunkGenerator outer;
 
-        ScriptedBlockPopulator(@NotNull String containerName, @NotNull MapTag instanceDefs) {
-            this.containerName = containerName;
-            this.instanceDefs = instanceDefs;
+        ScriptedBlockPopulator(@NotNull ScriptedChunkGenerator outer) {
+            this.outer = outer;
         }
 
         @Override
-        public void populate(@NotNull WorldInfo worldInfo, @NotNull Random random, int chunkX, int chunkZ, @NotNull LimitedRegion limitedRegion) {
-            Object raw = ScriptManager.getContainer(containerName);
-            if (!(raw instanceof GeneratorContainer gc)) return;
-            if (!gc.hasSection(GeneratorContainer.SECTION_POPULATORS)) return;
+        public void populate(@NotNull WorldInfo info, @NotNull Random random, int chunkX, int chunkZ, @NotNull LimitedRegion region) {
+            GeneratorContainer gc = outer.container();
+            if (gc == null) return;
 
-            World world = Bukkit.getWorld(worldInfo.getName());
-            ContextTag ctx = new ContextTag()
-                    .put("baseHeight", new ElementTag(resolveBaseHeight(containerName, worldInfo, chunkX, chunkZ, instanceDefs)));
-
-            addChunkContext(ctx, world, chunkX, chunkZ);
-
-            ScriptQueue queue = gc.createQueue(GeneratorContainer.SECTION_POPULATORS, ctx, instanceDefs);
-            if (queue == null) return;
-
-            queue.setTempData(TEMP_LIMITED_REGION, limitedRegion);
-            queue.start();
-        }
-    }
-
-    private static void addChunkContext(@NotNull ContextTag ctx, @Nullable World world, int chunkX, int chunkZ) {
-        ctx.put("chunkX", new ElementTag(chunkX))
-                .put("chunkZ", new ElementTag(chunkZ));
-
-        if (world != null) {
-            ctx.put("world", new WorldTag(world))
-                    .put("chunk", new ChunkTag(world, chunkX, chunkZ));
+            ScriptQueue queue = gc.createQueue(
+                    GeneratorContainer.SECTION_POPULATORS,
+                    buildChunkContext(info, chunkX, chunkZ),
+                    outer.instanceDefs
+            );
+            if (queue != null) {
+                queue.setTempData(TEMP_LIMITED_REGION, region);
+                queue.start();
+            }
         }
     }
 }
